# diasoft-test-task

./: .gitignore  README.md
task 2/: main.cpp
task 3/: CMakeLists.txt  prog1.cpp  prog2.cpp
task 3 final/: Makefile  prog1  prog2  prog2.cpp
task 3 prog 1/: CMakeLists.txt  main.cpp
